# cloud-storage-utilizer

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
src/: app.rs  cli.rs  errors.rs  logger.rs  main.rs  tui.rs
src/cloud_client/: mod.rs
src/cloud_client/dropbox/: api_url.rs  client.rs  mod.rs
src/cloud_client/dropbox/entities/: metadata.rs
src/cloud_client/dropbox/parameters/: delete.rs  download.rs  list_folder.rs  mod.rs  upload.rs
src/cloud_client/dropbox/responses/: list_folder.rs  mod.rs
src/utilities/: files.rs
